--- a/clientes/templates/clientes.html
+++ b/clientes/templates/clientes.html
@@ -9,17 +9,17 @@
 <div class="container">
     <div class="row">
 
-        <div class="col-md card-dashboard">
+        <div onclick="exibir_form('1')" class="col-md card-dashboard">
             <p class="text-card">Adicionar clientes</p>
         </div>
 
-        <div class="col-md card-dashboard">
+        <div onclick="exibir_form('2')"  class="col-md card-dashboard">
             <p class="text-card">Atualizar cliente</p>
         </div>
 
     </div>
-
-    <div class="adicionar-cliente">
+<br>
+    <div id="adicionar-cliente" class="adicionar-cliente">
         <form action="{% url 'clientes' %}"  method="POST"> {% csrf_token %}
             <div class="row">
                 <div class="col-md">
@@ -68,7 +68,16 @@
         </form>
     
     </div>
-    
+    <div id="att-cliente">
+        
+        <p>
+            <select id="cliente-select" onchange="dados_cliente()" name="" id="" class="form-control">
+                {% for cliente in clientes_list %}
+                    <option value="{{ cliente.id }}">{{ cliente.nome }}</option>
+                {% endfor %}
+            </select>
+        </p>
+    </div>
 </div>
 <script src="{% static 'clientes/js/clientes.js' %}"></script>
 {% endblock %}
